fix: align text to the left on desktip

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -731,6 +731,7 @@ small {
 
 @media screen and (min-width: 1024px) {
   .cta {
+    text-align: left;
     display: -ms-grid;
     display: grid;
         grid-template-areas: "title ." "count btn";
