--- a/app/scss/layout/_cta.scss
+++ b/app/scss/layout/_cta.scss
@@ -34,7 +34,7 @@
 
     // Desktop
     @include breakpoint-up(large){
-        
+        text-align: left;
         display: grid;
         grid-template-areas: "title ."
                              "count btn";
